@@ -1,3 +1,4 @@
 - Added the filter gravityflow_step_status_evaluation_approval to allow the status evaluation of approval step to check custom logic (X of Y approvals)
 - Fixed editable Post Image field not being populated with the current entry value on the User Input step.
+- Fixed status export .csv to include duration as a separate column so it is consistent with status export table info
 - Fixed a PHP warning for the Discussion field.
